--- a/TAF.EntityFramework/SCBF.EntityFramework.csproj
+++ b/TAF.EntityFramework/SCBF.EntityFramework.csproj
@@ -118,8 +118,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EntityFramework\DailyLogMap.cs" />
-    <Compile Include="EntityFramework\ProjectTaskMap.cs" />
     <Compile Include="EntityFramework\TAFDbContext.cs" />
     <Compile Include="EntityFramework\Repositories\TAFRepositoryBase.cs" />
     <Compile Include="Migrations\201506210746108_AbpZero_Initial.cs" />
@@ -190,26 +188,11 @@
     <Compile Include="Migrations\201609281412460_Upgrade_To_Abp_1_0.Designer.cs">
       <DependentUpon>201609281412460_Upgrade_To_Abp_1_0.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201702091412267_addTable_project.cs" />
-    <Compile Include="Migrations\201702091412267_addTable_project.Designer.cs">
-      <DependentUpon>201702091412267_addTable_project.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201702130538430_addTable_dailylog.cs" />
-    <Compile Include="Migrations\201702130538430_addTable_dailylog.Designer.cs">
-      <DependentUpon>201702130538430_addTable_dailylog.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201702141006501_modifyTable_projectTask.cs" />
-    <Compile Include="Migrations\201702141006501_modifyTable_projectTask.Designer.cs">
-      <DependentUpon>201702141006501_modifyTable_projectTask.cs</DependentUpon>
-    </Compile>
     <Compile Include="Migrations\AbpZeroDbMigrator.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Migrations\SeedData\DefaultCreator.cs" />
     <Compile Include="Migrations\SeedData\DefaultRolesCreator.cs" />
     <Compile Include="Migrations\SeedData\InitUsersCreator.cs" />
-    <Compile Include="Repositories\DailyLogRepository.cs" />
-    <Compile Include="Repositories\ProjectRepository.cs" />
-    <Compile Include="Repositories\ProjectTaskRepository.cs" />
     <Compile Include="TAFDataModule.cs" />
     <Compile Include="Migrations\SeedData\DefaultEditionsCreator.cs" />
     <Compile Include="Migrations\SeedData\DefaultLanguagesCreator.cs" />
@@ -282,17 +265,10 @@
     <EmbeddedResource Include="Migrations\201609281412460_Upgrade_To_Abp_1_0.resx">
       <DependentUpon>201609281412460_Upgrade_To_Abp_1_0.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201702091412267_addTable_project.resx">
-      <DependentUpon>201702091412267_addTable_project.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201702130538430_addTable_dailylog.resx">
-      <DependentUpon>201702130538430_addTable_dailylog.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201702141006501_modifyTable_projectTask.resx">
-      <DependentUpon>201702141006501_modifyTable_projectTask.cs</DependentUpon>
-    </EmbeddedResource>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Repositories\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
