--- a/TAF.Web/packages.config
+++ b/TAF.Web/packages.config
@@ -68,8 +68,10 @@
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="Nito.AsyncEx" version="3.0.1" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
+  <package id="sharpconfig" version="1.5.6" targetFramework="net452" />
   <package id="System.Collections.Immutable" version="1.2.0" targetFramework="net452" />
   <package id="System.Linq.Dynamic" version="1.0.6" targetFramework="net452" />
+  <package id="TAF.Utility" version="1.0.0.5" targetFramework="net452" />
   <package id="toastr" version="2.1.1" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
 </packages>
