--- a/Tools/TAF.Migrator/App.config
+++ b/Tools/TAF.Migrator/App.config
@@ -18,7 +18,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="Default" connectionString="Server=localhost; Database=TAF; Trusted_Connection=True;" providerName="System.Data.SqlClient" />
+    <add name="Default" connectionString="Server=localhost; Database=SCBF; Trusted_Connection=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
