--- a/TAF.Core/SCBF.Core.csproj
+++ b/TAF.Core/SCBF.Core.csproj
@@ -94,6 +94,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Storage\ProductCategory.cs" />
     <Compile Include="SysDictionary\SysDictionary.cs" />
     <Compile Include="SysDictionary\DictionaryCategory.cs" />
     <Compile Include="TAFEntity.cs" />
@@ -127,6 +128,7 @@
     <EmbeddedResource Include="Localization\Source\SCBF-zh-CN.xml" />
     <EmbeddedResource Include="Localization\Source\SCBF.xml" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
