--- a/TAF.EntityFramework/App.config
+++ b/TAF.EntityFramework/App.config
@@ -10,7 +10,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="Default" connectionString="Server=(LocalDb)\v11.0; Database=TAF_WMS; Trusted_Connection=True;" providerName="System.Data.SqlClient" />
+    <add name="Default" connectionString="Server=(LocalDb)\v11.0; Database=SCBF; Trusted_Connection=True;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
