--- a/TAF.Web/SCBF.Web.csproj
+++ b/TAF.Web/SCBF.Web.csproj
@@ -839,6 +839,7 @@
     <Content Include="assets\js\jquery.blockUI.js" />
     <Content Include="assets\js\jquery-2.2.0.min.map" />
     <Content Include="assets\js\json2.min.js" />
+    <Content Include="Scripts\productCategory.js" />
     <Content Include="Scripts\others\html5shiv.js" />
     <Content Include="Scripts\others\respond.min.js" />
     <Content Include="Scripts\others\respond.src.js" />
@@ -871,6 +872,7 @@
     <Compile Include="assets\js\ueditor\net\App_Code\UploadHandler.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\StorageController.cs" />
     <Compile Include="Controllers\TAFControllerBase.cs" />
     <Compile Include="Controllers\Results\ChallengeResult.cs" />
     <Compile Include="Global.asax.cs">
@@ -900,6 +902,7 @@
     <Content Include="Views\Home\_ProductCategory.cshtml" />
     <Content Include="Views\Shared\_Template.cshtml" />
     <None Include="Properties\PublishProfiles\public.pubxml" />
+    <Content Include="Views\Storage\_ProductCategoryIndex.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
