--- a/TAF.Web/SCBF.Web.csproj
+++ b/TAF.Web/SCBF.Web.csproj
@@ -851,6 +851,7 @@
     <Content Include="assets\js\sweetalert\sweet-alert.js" />
     <Content Include="assets\js\sweetalert\sweet-alert.min.js" />
     <Content Include="Scripts\Account\login.js" />
+    <Content Include="Scripts\sysDictionary.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -873,6 +874,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\StorageController.cs" />
+    <Compile Include="Controllers\SysDictionaryController.cs" />
     <Compile Include="Controllers\TAFControllerBase.cs" />
     <Compile Include="Controllers\Results\ChallengeResult.cs" />
     <Compile Include="Global.asax.cs">
@@ -903,6 +905,7 @@
     <Content Include="Views\Shared\_Template.cshtml" />
     <None Include="Properties\PublishProfiles\public.pubxml" />
     <Content Include="Views\Storage\_ProductCategoryIndex.cshtml" />
+    <Content Include="Views\SysDictionary\_SysDictionaryIndex.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -913,7 +916,6 @@
   <ItemGroup>
     <Folder Include="Abp\Framework\scripts\libs\requirejs\" />
     <Folder Include="App_Data\" />
-    <Folder Include="Other\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TAF.Application\SCBF.Application.csproj">
