--- a/TAF.EntityFramework/SCBF.EntityFramework.csproj
+++ b/TAF.EntityFramework/SCBF.EntityFramework.csproj
@@ -196,11 +196,20 @@
     <Compile Include="Migrations\201703131528212_addtable_product.Designer.cs">
       <DependentUpon>201703131528212_addtable_product.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201703131546021_addtable_product2.cs" />
+    <Compile Include="Migrations\201703131546021_addtable_product2.Designer.cs">
+      <DependentUpon>201703131546021_addtable_product2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201703131551225_addtable_product3.cs" />
+    <Compile Include="Migrations\201703131551225_addtable_product3.Designer.cs">
+      <DependentUpon>201703131551225_addtable_product3.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\AbpZeroDbMigrator.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Migrations\SeedData\DefaultCreator.cs" />
     <Compile Include="Migrations\SeedData\DefaultRolesCreator.cs" />
     <Compile Include="Repositories\LayerRepository.cs" />
+    <Compile Include="Repositories\ProductRepository.cs" />
     <Compile Include="Repositories\SysDictionaryRepository.cs" />
     <Compile Include="TAFDataModule.cs" />
     <Compile Include="Migrations\SeedData\DefaultEditionsCreator.cs" />
@@ -282,8 +291,16 @@
     <EmbeddedResource Include="Migrations\201703131528212_addtable_product.resx">
       <DependentUpon>201703131528212_addtable_product.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201703131546021_addtable_product2.resx">
+      <DependentUpon>201703131546021_addtable_product2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201703131551225_addtable_product3.resx">
+      <DependentUpon>201703131551225_addtable_product3.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="TAF.EntityFramework\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
