数据库操作新增any,all,where方法

--- a/TAF.Application/SCBF.Application.csproj
+++ b/TAF.Application/SCBF.Application.csproj
@@ -122,10 +122,19 @@
     <Compile Include="BaseInfo\LayerAppService.cs" />
     <Compile Include="BaseInfo\SysDictionaryAppService.cs" />
     <Compile Include="IBaseEntityApplicationService.cs" />
-    <Compile Include="IDefaultEntityApplicationService.cs" />
+    <Compile Include="Storage\Dto\EntryBillEditDto.cs" />
+    <Compile Include="Storage\Dto\EntryBillListDto.cs" />
+    <Compile Include="Storage\Dto\EntryBillQueryDto.cs" />
+    <Compile Include="Storage\Dto\EntryEditDto.cs" />
+    <Compile Include="Storage\Dto\EntryListDto.cs" />
+    <Compile Include="Storage\Dto\EntryQueryDto.cs" />
     <Compile Include="Storage\Dto\ProductEditDto.cs" />
     <Compile Include="Storage\Dto\ProductListDto.cs" />
     <Compile Include="Storage\Dto\ProductQueryDto.cs" />
+    <Compile Include="Storage\EntryAppService.cs" />
+    <Compile Include="Storage\EntryBillAppService.cs" />
+    <Compile Include="Storage\IEntryAppService.cs" />
+    <Compile Include="Storage\IEntryBillAppService.cs" />
     <Compile Include="Storage\IProductAppService.cs" />
     <Compile Include="Storage\ProductAppService.cs" />
     <Compile Include="TAFApplicationModule.cs" />
