--- a/TAF.EntityFramework/SCBF.EntityFramework.csproj
+++ b/TAF.EntityFramework/SCBF.EntityFramework.csproj
@@ -217,9 +217,9 @@
     <Compile Include="Migrations\201703141627064_modifytable_product5.Designer.cs">
       <DependentUpon>201703141627064_modifytable_product5.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201703231439277_addtable_stock.cs" />
-    <Compile Include="Migrations\201703231439277_addtable_stock.Designer.cs">
-      <DependentUpon>201703231439277_addtable_stock.cs</DependentUpon>
+    <Compile Include="Migrations\201703240212110_addtable_stock.cs" />
+    <Compile Include="Migrations\201703240212110_addtable_stock.Designer.cs">
+      <DependentUpon>201703240212110_addtable_stock.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\AbpZeroDbMigrator.cs" />
     <Compile Include="Migrations\Configuration.cs" />
@@ -229,6 +229,7 @@
     <Compile Include="Repositories\EntryRepository.cs" />
     <Compile Include="Repositories\LayerRepository.cs" />
     <Compile Include="Repositories\ProductRepository.cs" />
+    <Compile Include="Repositories\StockRepository.cs" />
     <Compile Include="Repositories\SysDictionaryRepository.cs" />
     <Compile Include="TAFDataModule.cs" />
     <Compile Include="Migrations\SeedData\DefaultEditionsCreator.cs" />
@@ -322,8 +323,8 @@
     <EmbeddedResource Include="Migrations\201703141627064_modifytable_product5.resx">
       <DependentUpon>201703141627064_modifytable_product5.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201703231439277_addtable_stock.resx">
-      <DependentUpon>201703231439277_addtable_stock.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201703240212110_addtable_stock.resx">
+      <DependentUpon>201703240212110_addtable_stock.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
