--- a/TAF.Application/SCBF.Application.csproj
+++ b/TAF.Application/SCBF.Application.csproj
@@ -123,20 +123,24 @@
     <Compile Include="BaseInfo\SysDictionaryAppService.cs" />
     <Compile Include="IBaseEntityApplicationService.cs" />
     <Compile Include="Storage\Dto\EntryBillEditDto.cs" />
-    <Compile Include="Storage\Dto\EntryBillListDto.cs" />
-    <Compile Include="Storage\Dto\EntryBillQueryDto.cs" />
     <Compile Include="Storage\Dto\EntryEditDto.cs" />
-    <Compile Include="Storage\Dto\EntryListDto.cs" />
+    <Compile Include="Storage\Dto\ProductInStockListDto.cs" />
+    <Compile Include="Storage\Dto\ProductStockQueryDto.cs" />
     <Compile Include="Storage\Dto\EntryQueryDto.cs" />
     <Compile Include="Storage\Dto\ProductEditDto.cs" />
     <Compile Include="Storage\Dto\ProductListDto.cs" />
     <Compile Include="Storage\Dto\ProductQueryDto.cs" />
+    <Compile Include="Storage\Dto\StockEditDto.cs" />
+    <Compile Include="Storage\Dto\StockListDto.cs" />
+    <Compile Include="Storage\Dto\StockQueryDto.cs" />
     <Compile Include="Storage\EntryAppService.cs" />
     <Compile Include="Storage\EntryBillAppService.cs" />
     <Compile Include="Storage\IEntryAppService.cs" />
     <Compile Include="Storage\IEntryBillAppService.cs" />
     <Compile Include="Storage\IProductAppService.cs" />
+    <Compile Include="Storage\IStockAppService.cs" />
     <Compile Include="Storage\ProductAppService.cs" />
+    <Compile Include="Storage\StockAppService.cs" />
     <Compile Include="TAFApplicationModule.cs" />
     <Compile Include="TAFAppServiceBase.cs" />
     <Compile Include="MultiTenancy\Dto\CreateTenantInput.cs" />
