--- a/TAF.EntityFramework/SCBF.EntityFramework.csproj
+++ b/TAF.EntityFramework/SCBF.EntityFramework.csproj
@@ -118,10 +118,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EntityFramework\Maps\DeliveryBillMap.cs" />
     <Compile Include="EntityFramework\Maps\DeliveryMap.cs" />
     <Compile Include="EntityFramework\Maps\StockMap.cs" />
-    <Compile Include="EntityFramework\Maps\EntryBillMap.cs" />
     <Compile Include="EntityFramework\Maps\EntryMap.cs" />
     <Compile Include="EntityFramework\TAFDbContext.cs" />
     <Compile Include="EntityFramework\Repositories\TAFRepositoryBase.cs" />
@@ -220,6 +218,10 @@
     <Compile Include="Migrations\201703240212110_addtable_stock.cs" />
     <Compile Include="Migrations\201703240212110_addtable_stock.Designer.cs">
       <DependentUpon>201703240212110_addtable_stock.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201703241620443_modifytable_stock2.cs" />
+    <Compile Include="Migrations\201703241620443_modifytable_stock2.Designer.cs">
+      <DependentUpon>201703241620443_modifytable_stock2.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\AbpZeroDbMigrator.cs" />
     <Compile Include="Migrations\Configuration.cs" />
@@ -326,6 +328,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201703240212110_addtable_stock.resx">
       <DependentUpon>201703240212110_addtable_stock.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201703241620443_modifytable_stock2.resx">
+      <DependentUpon>201703241620443_modifytable_stock2.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
