添加财务模块

--- a/TAF.Core/SCBF.Core.csproj
+++ b/TAF.Core/SCBF.Core.csproj
@@ -103,6 +103,7 @@
     <Compile Include="Storage\Entry.cs" />
     <Compile Include="Storage\DeliveryBill.cs" />
     <Compile Include="Storage\EntryBill.cs" />
+    <Compile Include="Storage\IDeliveryBillRepository.cs" />
     <Compile Include="Storage\IEntryBillRepository.cs" />
     <Compile Include="Storage\IEntryRepository.cs" />
     <Compile Include="Storage\IProductRepository.cs" />
