--- a/TAF.Application/SCBF.Application.csproj
+++ b/TAF.Application/SCBF.Application.csproj
@@ -122,6 +122,8 @@
     <Compile Include="BaseInfo\LayerAppService.cs" />
     <Compile Include="BaseInfo\SysDictionaryAppService.cs" />
     <Compile Include="IBaseEntityApplicationService.cs" />
+    <Compile Include="Storage\DeliveryAppService.cs" />
+    <Compile Include="Storage\DeliveryBillAppService.cs" />
     <Compile Include="Storage\Dto\StockBillEditDto.cs" />
     <Compile Include="Storage\Dto\ProductStockListDto.cs" />
     <Compile Include="Storage\Dto\ProductStockQueryDto.cs" />
@@ -134,6 +136,8 @@
     <Compile Include="Storage\Dto\StockQueryDto.cs" />
     <Compile Include="Storage\EntryAppService.cs" />
     <Compile Include="Storage\EntryBillAppService.cs" />
+    <Compile Include="Storage\IDeliveryAppService.cs" />
+    <Compile Include="Storage\IDeliveryBillAppService.cs" />
     <Compile Include="Storage\IEntryAppService.cs" />
     <Compile Include="Storage\IEntryBillAppService.cs" />
     <Compile Include="Storage\IProductAppService.cs" />
